Image error was fixed

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <div class="modal-window">
         <div class="cookiesContent" id="cookiesPopup">
-          <img src="https://cdn-icons.flaticon.com/png/512/4293/premium/4293758.png?token=exp=1646034450~hmac=d03c48f701635618c925b5c735403ccc" alt="cookies-img" />
+          <img src="snake.png" alt="cookies-img" />
           <p>Game over!</p>
           <button class="btn accept">OK</button>
         </div>
