--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <div class="modal-window">
         <div class="cookiesContent" id="cookiesPopup">
-          <img src="snake.png" alt="cookies-img" />
+          <img src="./snake.png" alt="cookies-img" />
           <p>Game over!</p>
           <button class="btn accept">OK</button>
         </div>
